refactor RleImport added

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div>
         <textarea name="rle" id="rle" cols="40" rows="4">Вставьте свой код RLE шаблона</textarea><br>
-        <input type="button" value="Import data" onclick="l.pars()">
+        <input type="button" value="Import data" onclick="r.pars(document.getElementById('rle'))">
     </div>
 </div>
 Step №<span class="step"></span>
